# online-library

./: .gitignore  README.md  class_diagram.mdj  client.sh  database.sh  loadtest.js  reset-db.sh  run.sh  server.sh
database/: data.sql
frontend/: 1index.html  book.html  book.js  books.html  catalog.html  favourites.js  index.html  script.js  style.css  user.html  user.js
frontend/database/: beg.sql  data.sql  quary.sql
frontend/fonts/: LitteraPlainBold.eot  LitteraPlainBook.eot  LitteraPlainMedium.eot
server/: CMakeLists.txt  book.h  build.sh  connection.h  favorite.h  main.cpp  message.h  search.h  server.cpp  server.h  user.h
